# slate-public

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  pyrightconfig.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  live-provider-certification.yml
cloud/: .gitattributes  .gitignore  README.md  docker-compose.yml
cloud/backend/: .env.example  alembic.ini  pyproject.toml
cloud/backend/app/: ai_response_quality.py  config.py  db.py  main.py  models.py  schemas.py
cloud/backend/app/auth/: clerk.py
cloud/backend/app/routes/: account.py  billing.py  readiness.py  verdicts.py  webhooks.py
cloud/backend/migrations/: env.py
cloud/backend/migrations/versions/: 001_initial.py
cloud/backend/tests/: conftest.py  test_account.py  test_ai_response_quality.py  test_billing.py  test_migrations.py  test_readiness.py  test_verdicts.py  test_webhook_and_license.py
cloud/docs/: ai-response-quality-framework.md  deployment.md
cloud/docs/launch/: LAUNCH.md  LAUNCH_COPY.md  SLATE_OPTIONS_GAP_CLOSURE_PLAN.md
cloud/frontend/: .env.example  eslint.config.mjs  next.config.js  package-lock.json  package.json  playwright.config.ts  proxy.ts  tailwind.config.ts
cloud/frontend/app/: globals.css  layout.tsx  page.tsx
cloud/frontend/app/dashboard/: layout.tsx  page.tsx
cloud/frontend/app/dashboard/compare/: page.tsx
cloud/frontend/app/dashboard/license/: page.tsx
cloud/frontend/app/dashboard/verdicts/[id]/: page.tsx
cloud/frontend/app/pricing/: page.tsx
cloud/frontend/components/: verdict-card.tsx  verdict-detail.tsx
cloud/frontend/lib/: ai-response-quality.ts  api.ts  auth.ts
cloud/frontend/scripts/: verify-content.mjs
cloud/frontend/tests/e2e/: dashboard.spec.ts
compat/slate-pro/: .gitattributes  .gitignore  README.md  pyproject.toml
compat/slate-pro/docs/: ai-response-quality-framework.md
compat/slate-pro/src/slate_pro/: __init__.py  cli.py
compat/slate-pro/src/slate_pro/evidence/: __init__.py  bundle.py
compat/slate-pro/src/slate_pro/panel/: __init__.py  claude_client.py  ensemble.py  fusion.py  local_ollama_client.py  prompts.py  verdict.py
compat/slate-pro/src/slate_pro/panel/personas/: __init__.py  animator.py  audience.py  base.py  color_grader.py  director.py
compat/slate-pro/tests/test_cli/: test_compat.py
docs/: ai-response-quality-framework.md  installation.md  quickstart.md  release-certification.md  signal-reference.md  verification-matrix.md
examples/basic/: README.md  manifest.json
scripts/: assert_certification_verdict.py  make_certification_fixture.py
src/slate/: __init__.py  cli.py  config.py  engine.py  frames.py  manifest.py  prompts.py  response_quality.py  signals.py  verdict.py
src/slate/evidence/: __init__.py  bundle.py
src/slate/panel/: __init__.py  claude_client.py  ensemble.py  fusion.py  local_ollama_client.py  prompts.py  verdict.py
src/slate/panel/personas/: __init__.py  animator.py  audience.py  base.py  color_grader.py  director.py
src/slate/providers/: __init__.py  base.py  gemma.py  nvidia.py
tests/: conftest.py  test_cli.py  test_config.py  test_engine.py  test_frames.py  test_manifest.py  test_prompts.py  test_response_quality.py
tests/test_evidence/: test_bundle.py
tests/test_panel/: test_base_and_prompts.py  test_claude_client.py  test_ensemble.py  test_fusion.py  test_local_ollama_client.py  test_personas.py  test_verdict.py
tests/test_providers/: test_base.py  test_gemma.py  test_nvidia.py
