[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slate-ai"
version = "0.1.0"
description = "Don't ship broken AI animation. Multi-VLM verdict for rendered frame sequences."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Slate contributors" }]
keywords = ["ai", "animation", "vlm", "validation", "quality-assurance", "render", "unreal", "blender"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Video",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "anthropic>=0.39",
    "pydantic>=2.6",
    "requests>=2.31",
    "Pillow>=10.0",
    "typer>=0.12",
    "rich>=13.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[project.urls]
Homepage = "https://github.com/tygartnexus/slate-public"
Documentation = "https://github.com/tygartnexus/slate-public#readme"
Issues = "https://github.com/tygartnexus/slate-public/issues"

[project.scripts]
slate = "slate.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/slate"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["slate"]

[tool.coverage.report]
fail_under = 95
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "^\\s*\\.\\.\\.\\s*$",
]
